lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
step

def step()
{
	
	if (getVitesseY() < - 10 )
	{
		setPouseeDesiree (2) 
	}
}
